--- a/home.html
+++ b/home.html
@@ -36,5 +36,5 @@
     <a href="https://www.whatsaap.com" class="fa fa-whatsapp">Watsapp</a>
 
 </body>
-<footer>&COPY;Suzie's Cafeteria 2022</footer>
+<footer>&COPY;Suzie's Cafeteria 2022 All rights reserved</footer>
 </html>
