--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./CSS/about.css">
 </head>
 <body>
+    <header>
     <div class="container">
+        
         <nav>
         <ul>
             
@@ -17,7 +19,7 @@
             <li><a href="home.html">Home</a></li>
         </ul>
         </nav>
-    </div>
+    </div></header>
     <div id="menu">
         <iframe width="400" height="400" src="https://www.youtube.com/embed/nyDnQQSUfL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p></blockquote><cite><a href="https://youtu.be/nyDnQQSUfL0">Resource</a></cite>
